<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="118dp">






    <RelativeLayout
        android:id="@+id/priority_date_relative"
        android:layout_width="81dp"
        android:layout_height="match_parent">



        <TextView
            android:id="@+id/priority_text"
            android:layout_marginTop="11dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/colorCharcoalGrey"
            android:gravity="center_horizontal"
            android:text="@string/high"
            />


        <TextView
            android:visibility="gone"
            android:id="@+id/time_text"
            android:layout_marginTop="13.3dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/colorSteel"
            android:text="@string/not_date"
            />





        <TextView
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/colorSteel"
            android:gravity="center_horizontal"
            android:text="@string/no_date"
            />



        <TextView
            android:id="@+id/high_time_text"
            android:layout_marginTop="13.3dp"
            android:layout_marginStart="8dp"
            android:layout_below="@+id/priority_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/colorSteel"
            android:text="@string/time"
            />


        <TextView
            android:id="@+id/high_pm_text"
            android:layout_marginStart="2dp"
            android:layout_marginTop="48.3dp"
            android:layout_toEndOf="@+id/high_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/colorSteel"
            android:text="@string/pm"
            />


        <TextView
            android:id="@+id/high_day_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/high_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/colorSteel"
            android:gravity="center_horizontal"
            android:text="@string/may"
            />




    </RelativeLayout>


    <View
        android:id="@+id/right_view"
        android:background="@color/colorSilver"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"

        android:layout_toEndOf="@+id/priority_date_relative"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>


    <RelativeLayout

        android:layout_toEndOf="@id/right_view"
        android:layout_above="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_above="@+id/assignee_relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/high_description_text"
                android:layout_toStartOf="@+id/more_relative"
                android:layout_marginStart="15dp"
                android:layout_marginTop="9dp"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/colorSteel"
                android:lineSpacingExtra="4sp"
                android:text="@string/text_three"
                />


            <RelativeLayout
                android:layout_alignParentEnd="true"
                android:id="@+id/more_relative"
                android:layout_width="40dp"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_task_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </RelativeLayout>







        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/assignee_relative"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="49.3dp">


            <ImageView
                android:id="@+id/attach_image"
                android:layout_centerVertical="true"
                android:rotation="45"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_task_attach"
                android:layout_alignParentEnd="true"
                android:layout_width="24dp"
                android:layout_height="24dp"/>


            <ImageView
                android:visibility="gone"
                android:layout_marginEnd="6dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/attach_image"
                android:src="@drawable/ic_task_location"
                android:layout_width="24dp"
                android:layout_height="24dp"/>


            <TextView
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/colorCoolGrey"
                android:lineSpacingExtra="5sp"
                android:text="@string/no_assignee"
                />





        </RelativeLayout>






    </RelativeLayout>


    <View
        android:id="@+id/bottom_view"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorSilver"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</RelativeLayout>