<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                android:clickable="true"
                android:focusable="true"
                android:background="@color/colorHomeBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



    <RelativeLayout
        android:id="@+id/title_edit_relative"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="58dp">


        <RelativeLayout
            android:id="@+id/back_edit_task_relative"
            android:layout_width="58dp"
            android:layout_height="match_parent">


            <ImageView
                android:layout_marginStart="16dp"
                android:src="@drawable/back"
                android:layout_centerVertical="true"
                android:layout_width="24dp"
                android:layout_height="24dp"/>


        </RelativeLayout>


        <TextView
            android:layout_toEndOf="@+id/back_edit_task_relative"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/colorCharcoalGrey"
            android:text="@string/edit_task"
            />







    </RelativeLayout>


    <ScrollView
        android:scrollbarThumbVertical="@color/colorTransparent"
        android:layout_below="@+id/title_edit_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_marginBottom="9.3dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15.7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorSteel"
                android:text="@string/description"
                />


            <RelativeLayout
                android:paddingBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_task_bg"
                android:layout_width="match_parent"
                android:layout_height="80dp">



                <ImageView
                    android:layout_marginTop="9dp"
                    android:id="@+id/clear_description_image"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="6dp"

                    android:src="@drawable/clear_outline_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <EditText
                    android:id="@+id/description_edit"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:background="@null"
                    android:layout_toStartOf="@+id/clear_description_image"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:hint="@string/type_your_task_description"
                    android:textColor="@color/colorDescriptionEdit"
                    android:text="@string/text_desc"
                    />


            </RelativeLayout>


            <TextView
                android:layout_marginBottom="9dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorSteel"
                android:text="@string/workspaces"
                />


            <RelativeLayout
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_task_bg"
                android:layout_width="match_parent"
                android:layout_height="42dp">


                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/colorCharcoalGrey"
                    android:text="@string/workspace_edit"
                    />


                <ImageView
                    android:layout_marginEnd="11.4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </RelativeLayout>


            <TextView
                android:layout_marginBottom="9dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorSteel"
                android:text="@string/assignee"
                />


            <RelativeLayout
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_task_bg"
                android:layout_width="match_parent"
                android:layout_height="42dp">


                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/colorCharcoalGrey"
                    android:text="@string/abbie_farmer"
                    />


                <ImageView
                    android:layout_marginEnd="11.4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </RelativeLayout>


            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginBottom="9dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-medium"
                        android:textStyle="normal"
                        android:textColor="@color/colorSteel"
                        android:text="@string/due_date"
                        />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView

                        android:layout_marginBottom="9dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-medium"
                        android:textStyle="normal"
                        android:textColor="@color/colorSteel"
                        android:text="@string/priority"
                        />


                </RelativeLayout>



            </LinearLayout>
            
            
            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                
                <RelativeLayout
                    android:id="@+id/date_relative"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/edit_task_bg"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="42dp">

                    <TextView
                        android:id="@+id/date_text_view"
                        android:layout_marginStart="15dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textColor="@color/colorCharcoalGrey"
                        android:text="@string/time_edit_task"
                        />


                    <ImageView
                        android:layout_marginEnd="6dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_calendar_task_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/edit_task_bg"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="42dp">

                    <TextView
                        android:id="@+id/priority_text"
                        android:layout_marginStart="15dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textColor="@color/colorCharcoalGrey"
                        android:text="@string/high"
                        />


                    <ImageView
                        android:layout_marginEnd="6dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/video_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>




                
                
            </LinearLayout>


            <RelativeLayout
                android:layout_marginTop="22.5dp"
                android:layout_marginBottom="22.5dp"
                android:layout_width="match_parent"
                android:layout_height="92dp">



                <android.support.v7.widget.RecyclerView
                    android:layout_toStartOf="@+id/add_photo_relative"
                    android:id="@+id/photo_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    
                </android.support.v7.widget.RecyclerView>
                
                
                <RelativeLayout
                    android:id="@+id/add_photo_relative"
                    android:layout_alignParentEnd="true"
                    android:layout_width="60dp"
                    android:layout_height="match_parent">


                    <ImageView
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_add_active"
                        android:layout_width="38dp"
                        android:layout_height="38dp"/>



                </RelativeLayout>


            </RelativeLayout>



            <Button
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="18dp"
                android:id="@+id/save_change_button"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="8sp"
                android:textStyle="normal"
                android:textSize="16sp"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorPrimary"
                android:text="@string/save_changes"
                android:background="@drawable/sign_in_bg"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>



        </LinearLayout>



    </ScrollView>




</RelativeLayout>