<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:app="http://schemas.android.com/apk/res-auto"
          xmlns:tools="http://schemas.android.com/tools"
          android:background="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout

            android:layout_marginTop="19.8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/back_password_relative"
                android:layout_width="50dp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_marginStart="16dp"
                    android:src="@drawable/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>






            </RelativeLayout>


        </RelativeLayout>



        <ImageView
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_password"
            android:layout_width="88.3dp"
            android:layout_height="90dp"/>


        <TextView
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="@color/colorCharcoalGrey"
            android:gravity="center_horizontal"
            android:text="@string/enter_your_password"
            />


        <android.support.design.widget.TextInputLayout
            android:theme="@style/Custom.TextInputLayout"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_marginStart="17.5dp"
            android:layout_marginEnd="17.5dp"
            android:layout_marginTop="22dp"
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText

                android:textColorHint="@color/colorSteel"
                android:maxLines="1"
                android:imeOptions="actionNone"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_hide_password"
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>



        </android.support.design.widget.TextInputLayout>



        <RelativeLayout
            android:layout_marginEnd="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <CheckBox
                android:id="@+id/check_box_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@+id/check_box_password"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/colorSteel"
                android:text="@string/remember_password"
                />



            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/forgot_text"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/colorCharcoalGrey"
                android:text="@string/forgot_password"
                />


        </RelativeLayout>


    </LinearLayout>






    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:id="@+id/go_to_home_relative"
        android:background="@drawable/go_to_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/path"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>



        <ImageView

            android:src="@drawable/ic_action_go_to"
            android:layout_centerInParent="true"
            android:layout_width="31dp"
            android:layout_height="26dp"/>



    </RelativeLayout>

</RelativeLayout>